# Inox

./: .aiderignore  .gitignore  AGENTS.md  AUTHORS.md  BUILD_AND_TEST_INSTRUCTIONS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  TRADEMARK.md
cmake/: InoxCompilerOptions.cmake  InoxInstall.cmake  InoxPlatform.cmake  InoxSanitizers.cmake  InoxWarnings.cmake
cmake/toolchains/: aix-openxl.cmake  android-ndk.cmake  freebsd-clang.cmake  hpux-gcc.cmake  illumos-clang.cmake  linux-clang.cmake  macos-clang.cmake  netbsd-clang.cmake  openbsd-clang.cmake  solaris-gcc.cmake  unixware-gcc.cmake
docs/: INOX_CANONICAL.md  LANGUAGE_REFERENCE.md  index.html
docs/canonical/: language-reference.md  llvm-backend.md  roadmap.md  runtime.md  semantics.md  syntax.md  testing.md  type-system.md  vision.md
docs/decisions/: ADR-0005-consolidated-0.1-language-decisions.md  ADR-0006-inox-0.1-constitution.md
docs/development/: toolchain.md
docs/open-questions/: OPEN_QUESTIONS.md
docs/site/: index.html
examples/: bitwise.inox  control-flow.inox  empty.inox  exceptions.inox  functions.inox  hello.inox  llvm-associated-methods.inox  llvm-bool-comparisons.inox  llvm-bool-operators.inox  llvm-elif-return.inox  llvm-for-range-break-continue.inox  llvm-for-range-step.inox  llvm-function-call.inox  llvm-if-merge.inox  llvm-if-no-else.inox  llvm-if-return.inox  llvm-inline-typed-local.inox  llvm-input-integer.inox  llvm-integer-function.inox  llvm-integer-operators.inox  llvm-local-assignment.inox  llvm-local-variables.inox  llvm-put-output-basic.inox  llvm-putln-integer.inox  llvm-repeat-break-continue.inox  llvm-repeat-flexible-end.inox  llvm-repeat-flexible-middle.inox  llvm-repeat-flexible-start.inox  llvm-struct-basic.inox  llvm-struct-field-defaults.inox  llvm-struct-values.inox  llvm-subroutine-calls.inox  llvm-while-break-continue.inox  llvm-while-loop.inox  math-showcase.inox  operator-precedence.inox  repeat-until.inox  showcase.inox  type-checking.inox  types.inox  (+2 more)
grammar/: grammar.ebnf
licenses/: README.md
scripts/: package-release.ps1  package-release.sh  run-tests.ps1  run-tests.sh
stdlib/: README.md  Std.Core.inox  Std.Debug.inox  Std.IO.inox  Std.Math.inox
tests/: README.md
tests/codegen/: llvm-control-flow-smoke.inox  llvm-struct-value-smoke.inox
tests/integration/: README.md  output-basic.inox  run-hello.inox  run-hello.out
tests/invalid/: README.md  invalid-001.inox  invalid-002.inox  invalid-003.inox  invalid-004.inox  invalid-005.inox  invalid-006.inox  invalid-007.inox  invalid-008.inox  invalid-009.inox  invalid-010.inox  invalid-011.inox  invalid-012.inox  invalid-013.inox  invalid-014.inox  invalid-015.inox  invalid-016.inox  invalid-017.inox  invalid-018.inox  invalid-019.inox  invalid-020.inox  invalid-021.inox  invalid-022.inox  invalid-023.inox  invalid-024.inox  (+7 more)
tools/: calc_differential_test.py
(+119 files in other folders)
